--- a/HP35/HP35.csproj
+++ b/HP35/HP35.csproj
@@ -7,4 +7,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <None Include="bin\Debug\net6.0\postnummer.csv" />
+    </ItemGroup>
+
 </Project>
