--- a/HP35/HP35.csproj
+++ b/HP35/HP35.csproj
@@ -11,4 +11,8 @@
       <None Include="bin\Debug\net6.0\postnummer.csv" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Current\T9" />
+    </ItemGroup>
+
 </Project>
